--- a/Resources/views/Crud/Macro/breadcrumb.html.twig
+++ b/Resources/views/Crud/Macro/breadcrumb.html.twig
@@ -16,7 +16,7 @@
                         {% endif %}
                     {% else %}
                         <li>
-                            <a href="{{ path('adevis_admin_dashboard') }}">{{ 'adevis.ui.administration'|trans }}</a>
+                            <a href="{{ path('miky_admin_dashboard') }}">{{ 'miky.ui.administration'|trans }}</a>
                         </li>
                     {% endfor %}
 {% endmacro %}
