--- a/Resources/views/Grid/Field/enabled.html.twig
+++ b/Resources/views/Grid/Field/enabled.html.twig
@@ -1,2 +1,2 @@
-{% import '@AdevisAdmin/Macro/labels.html.twig' as label %}
+{% import '@MikyAdmin/Macro/labels.html.twig' as label %}
 {{ label.status(data) }}
