--- a/Resources/views/_flashes.html.twig
+++ b/Resources/views/_flashes.html.twig
@@ -9,7 +9,7 @@
             <i class="{{ icon|default('checkmark') }} icon"></i>
             <div class="content">
                 <div class="alert {{ 'alert-'~type }}">
-                    <strong>{% set header = 'adevis.ui.'~type %}
+                    <strong>{% set header = 'miky.ui.'~type %}
                         {{ header|trans }}</strong> {{ message }}</div>
             </div>
         </div>
