--- a/Resources/views/_header.html.twig
+++ b/Resources/views/_header.html.twig
@@ -161,7 +161,7 @@
                 </li>
             </ul>
 
-            <a href="#" class="search-link" data-toggle="search"><i class="pg-search"></i>Type anywhere to <span class="bold">search</span></a> </div>
+            <a href="#" class="search-link" data-toggle="search"><i class="pg-search"></i><span class="bold">{{ "miky_core.search"|trans }}</span></a> </div>
     </div>
     <div class=" pull-right">
         <div class="header-inner">
