--- a/Resources/views/_searchpanel.html.twig
+++ b/Resources/views/_searchpanel.html.twig
@@ -15,7 +15,7 @@
 
         <div class="container-fluid">
 
-            <input id="overlay-search" class="no-border overlay-search bg-transparent" placeholder="Search..." autocomplete="off" spellcheck="false">
+            <input id="overlay-search" class="no-border overlay-search bg-transparent" placeholder="{{ "miky_core.search"|trans }}..." autocomplete="off" spellcheck="false">
             <br>
             <div class="inline-block">
                 <div class="checkbox right">
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="inline-block m-l-10">
-                <p class="fs-13">Press enter to search</p>
+                <p class="fs-13">{{ "miky_core.press_enter_to_search"|trans }}</p>
             </div>
 
         </div>
@@ -36,7 +36,7 @@
             <span id="overlay-suggestions"></span>
             <br>
             <div class="search-results m-t-40">
-                <p class="bold">Pages Search Results</p>
+                <p class="bold"></p>
                 <div class="row">
                     <div class="col-md-6">
 
