--- a/Resources/views/Crud/Breadcrumb/_create.html.twig
+++ b/Resources/views/Crud/Breadcrumb/_create.html.twig
@@ -1,9 +1,9 @@
-{% import 'AdevisAdminBundle:Crud/Macro:breadcrumb.html.twig' as breadcrumb %}
+{% import 'MikyAdminBundle:Crud/Macro:breadcrumb.html.twig' as breadcrumb %}
 
 {% set breadcrumbs = [
-        { label: 'adevis.ui.administration'|trans, url: path('adevis_admin_dashboard') },
+        { label: 'miky.ui.administration'|trans, url: path('miky_admin_dashboard') },
         { label: (metadata.applicationName~'.ui.'~metadata.pluralName)|trans, url: path(configuration.getRouteName('index'), configuration.vars.route.parameters|default({})) },
-        { label: 'adevis.ui.new'|trans }
+        { label: 'miky.ui.new'|trans }
     ]
 %}
 
