--- a/Resources/views/Crud/Breadcrumb/_index.html.twig
+++ b/Resources/views/Crud/Breadcrumb/_index.html.twig
@@ -1,7 +1,7 @@
-{% import 'AdevisAdminBundle:Crud/Macro:breadcrumb.html.twig' as breadcrumb %}
+{% import 'MikyAdminBundle:Crud/Macro:breadcrumb.html.twig' as breadcrumb %}
 
 {% set breadcrumbs = [
-        { label: 'adevis.ui.administration'|trans, url: path('adevis_admin_dashboard') },
+        { label: 'miky.ui.administration'|trans, url: path('miky_admin_dashboard') },
         { label: (metadata.applicationName~'.ui.'~metadata.pluralName)|trans },
     ]
 %}
