--- a/Resources/views/Form/_create.html.twig
+++ b/Resources/views/Form/_create.html.twig
@@ -1,7 +1,7 @@
 <div class="ui basic segment">
     <div class="ui buttons">
-        <button class="ui labeled icon primary button" type="submit"><i class="plus icon"></i>{{- 'adevis.ui.create'|trans -}}</button>
-        <div class="or" data-text="{{ 'adevis.ui.or'|trans }}"></div>
-        {% include '@AdevisAdmin/Form/_cancelButton.twig' with {'path': cancel_path|default(null)} %}
+        <button class="ui labeled icon primary button" type="submit"><i class="plus icon"></i>{{- 'miky_core.create'|trans -}}</button>
+        <div class="or" data-text="{{ 'miky.ui.or'|trans }}"></div>
+        {% include '@MikyAdmin/Form/_cancelButton.twig' with {'path': cancel_path|default(null)} %}
     </div>
 </div>
