--- a/Resources/views/Grid/Action/create.html.twig
+++ b/Resources/views/Grid/Action/create.html.twig
@@ -1,3 +1,3 @@
-{% import 'AdevisAdminBundle:Macro:buttons.html.twig' as buttons %}
+{% import 'MikyAdminBundle:Macro:buttons.html.twig' as buttons %}
 
 {{ buttons.create(path(grid.requestConfiguration.getRouteName('create'))) }}
