--- a/Resources/views/Grid/Action/duplicate.html.twig
+++ b/Resources/views/Grid/Action/duplicate.html.twig
@@ -1,3 +1,3 @@
-{% import 'AdevisAdminBundle:Macro:buttons.html.twig' as buttons %}
+{% import 'MikyAdminBundle:Macro:buttons.html.twig' as buttons %}
 
 {{ buttons.duplicate(path(grid.requestConfiguration.getRouteName('duplicate'), {'id': data.id})) }}
