--- a/Resources/views/Grid/Action/link.html.twig
+++ b/Resources/views/Grid/Action/link.html.twig
@@ -1,3 +1,3 @@
-{% from 'AdevisAdminBundle:Macro:common.html.twig' import attributes %}
+{% from 'MikyAdminBundle:Macro:common.html.twig' import attributes %}
 
 <a href="{{ url|default(action.options.url) }}" {% if action.options.attr is defined %}{{ attributes(action.options.attr) }}{% endif %}>{{ action.label|trans }}</a>
