--- a/Resources/views/Grid/Action/route.html.twig
+++ b/Resources/views/Grid/Action/route.html.twig
@@ -1,3 +1,3 @@
 {% set url = path(options.route, options.parameters) %}
 
-{% include 'AdevisAdminBundle:Grid/Action:link.html.twig' %}
+{% include 'MikyAdminBundle:Grid/Action:link.html.twig' %}
