--- a/Resources/views/Grid/Action/validate.html.twig
+++ b/Resources/views/Grid/Action/validate.html.twig
@@ -1,3 +1,3 @@
-{% import 'AdevisAdminBundle:Macro:buttons.html.twig' as buttons %}
+{% import 'MikyAdminBundle:Macro:buttons.html.twig' as buttons %}
 
 {{ buttons.validate(path(grid.requestConfiguration.getRouteName('validate'), {'id': data.id})) }}
