--- a/Resources/views/Grid/Filter/string.html.twig
+++ b/Resources/views/Grid/Filter/string.html.twig
@@ -1,4 +1,4 @@
-{% form_theme form 'AdevisAdminBundle:Form:theme.html.twig' %}
+{% form_theme form 'MikyAdminBundle:Form:theme.html.twig' %}
 
 {{ form_widget(form.type, {'attr' : {'class': 'form-control form-filter input-sm'}}) }}
 {{ form_widget(form.value, {'attr' : {'class': 'form-control form-filter input-sm'}}) }}
