--- a/Resources/views/Crud/update.html.twig
+++ b/Resources/views/Crud/update.html.twig
@@ -42,12 +42,32 @@
 {{ form_end(form, {'render_rest': false}) }}
     </div>
 
+    <div class="row">
+        {{ headers.default(header|trans, configuration.vars.icon|default('plus'), configuration.vars.subheader|default(null)|trans) }}
 
-{% endblock %}
-{% block javascripts %}
-    <script>
-        var current_object_id = {{ resource.id }};
-        var current_object_metadata_name = "{{ metadata.name }}";
-    </script>
-    {{ parent() }}
+        {{ form_start(form, {'action': path(configuration.getRouteName('update'), configuration.vars.route.parameters|default({ 'id': resource.id })), 'attr': {'class': '', 'novalidate': 'novalidate'}}) }}
+        <input type="hidden" name="_method" value="PUT" />
+        <div class="col-md-12">
+
+            <div class="actions btn-set text-right">
+                {% include 'MikyAdminBundle:Form:_saveChanges.html.twig' with {'cancel_path': path(configuration.getRouteName('index'), configuration.vars.route.parameters|default({}))} %}
+
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+
+                </div>
+                <div class="panel-body">
+                    {% if configuration.vars.templates.form is defined %}
+                        {% include configuration.vars.templates.form %}
+                    {% else %}
+                        {{ form_widget(form) }}
+                    {% endif %}
+                </div>
+            </div>
+
+        </div>
+        {{ form_row(form._token) }}
+        {{ form_end(form, {'render_rest': false}) }}
+    </div>
 {% endblock %}
