--- a/Resources/views/Crud/create.html.twig
+++ b/Resources/views/Crud/create.html.twig
@@ -11,37 +11,33 @@
     {% include configuration.vars.templates.breadcrumb|default('MikyAdminBundle:Crud/Breadcrumb:_create.html.twig') %}
 {% endblock %}
 {% block content %}
-
+    <div class="row">
        {{ headers.default(header|trans, configuration.vars.icon|default('plus'), configuration.vars.subheader|default(null)|trans) }}
-    <div class="container-fluid container-fixed-lg sm-p-l-20 sm-p-r-20">
-            {{ form_start(form, {'action': path(configuration.vars.route.name|default(configuration.getRouteName('create')), configuration.vars.route.parameters|default({})), 'attr': {'class': 'form-horizontal form-row-seperated', 'novalidate': 'novalidate'}}) }}
 
-            <div class="portlet">
+        {{ form_start(form, {'action': path(configuration.vars.route.name|default(configuration.getRouteName('create')), configuration.vars.route.parameters|default({})), 'attr': {'class': '', 'novalidate': 'novalidate'}}) }}
 
-                <div class="portlet-title">
-                    <div class="caption">
-                        <i class="fa fa-shopping-cart"></i>{{ configuration.vars.subheader|default(null)|trans }}</div>
-                    <div class="actions btn-set">
-                        {% include 'MikyAdminBundle:Form:_saveChanges.html.twig' with {'cancel_path': path(configuration.getRouteName('index'), configuration.vars.route.parameters|default({}))} %}
+        <div class="col-md-12">
 
-                    </div>
+            <div class="actions btn-set text-right">
+                {% include 'MikyAdminBundle:Form:_saveChanges.html.twig' with {'cancel_path': path(configuration.getRouteName('index'), configuration.vars.route.parameters|default({}))} %}
+
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+
                 </div>
-                <div class="portlet-body">
-
-                {% if configuration.vars.templates.form is defined %}
+                <div class="panel-body">
+                    {% if configuration.vars.templates.form is defined %}
                     {% include configuration.vars.templates.form %}
-                {% else %}
+                    {% else %}
                     {{ form_widget(form) }}
-                {% endif %}
-
-            {{ form_row(form._token) }}
+                    {% endif %}
                 </div>
             </div>
+
         </div>
-
-            {{ form_end(form, {'render_rest': false}) }}
-
+        {{ form_row(form._token) }}
+        {{ form_end(form, {'render_rest': false}) }}
   </div>
-    
 {% endblock %}
 
