--- a/Resources/public/pages/css/pages.css
+++ b/Resources/public/pages/css/pages.css
@@ -6780,8 +6780,8 @@ body.rtl .checkbox label::after {
     border: 1px solid rgba(0, 0, 0, 0.07);
     border-radius: 2px;
     padding-top: 7px;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding-left: 12px !important;
+    padding-right: 12px !important;
     padding-bottom: 4px;
     overflow: hidden;
     -webkit-transition: background-color 0.2s ease;
