--- a/Resources/views/Crud/update.html.twig
+++ b/Resources/views/Crud/update.html.twig
@@ -43,3 +43,15 @@
         {{ form_end(form, {'render_rest': false}) }}
     </div>
 {% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-validation/js/jquery.validate.min.js') }}"
+            type="text/javascript"></script>
+    <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery-validation/localization/messages_'~app.request.locale~'.min.js') }}"
+            type="text/javascript"></script>
+    <script>
+        $(function () {
+            $('form').validate()
+        })
+    </script>
+{% endblock %}
