--- a/Resources/views/_rightpanel.html.twig
+++ b/Resources/views/_rightpanel.html.twig
@@ -38,10 +38,10 @@ Menu</span></a>
                         <div class="row p-b-10 ">
                             <div class="col-xs-6">
                                 <a class="btn-toggle-layout fs-12" data-action="menuPinned" href="#">
-                                    <img alt="Menu divided" class="m-b-15" src="assets/img/demo/menu_divided.png" data-src="assets/img/demo/menu_divided.png" data-src-retina="assets/img/demo/menu_divided_2x.png" width="126" height="95"> <span class="text-dark m-t-5">Divided Header & Fixed/Pinned Menu</span></a>
+                                    <img alt="Menu divided" class="m-b-15" src="{{ asset('bundles/mikyadmin/assets/img/demo/menu_divided.png') }}" data-src="{{ asset('bundles/mikyadmin/assets/img/demo/menu_divided.png') }}" data-src-retina="{{ asset('bundles/mikyadmin/assets/img/demo/menu_divided_con.png') }}" width="126" height="95"> <span class="text-dark m-t-5">Divided Header & Fixed/Pinned Menu</span></a>
                             </div>
                             <div class="col-xs-6">
-                                <a class="btn-toggle-layout fs-12" data-action="menuPinnedBelow" href="#"><img alt="Full header" class="m-b-15" src="assets/img/demo/full_header.png" data-src="assets/img/demo/full_header.png" data-src-retina="assets/img/demo/full_header_2x.png" width="126" height="95">
+                                <a class="btn-toggle-layout fs-12" data-action="menuPinnedBelow" href="#"><img alt="Full header" class="m-b-15" src="{{ asset('bundles/mikyadmin/assets/img/demo/full_header.png') }}" data-src="assets/img/demo/full_header.png" data-src-retina="{{ asset('bundles/mikyadmin/assets/img/demo/full_header_con.png') }}" width="126" height="95">
                                     <span class="text-dark m-t-5">Full Width Header & Fixed/Pinned
 Menu</span></a>
                             </div>
@@ -62,7 +62,7 @@ Menu</span></a>
                             Customize and Preview your dashboard.
                         </p>
                         <a href="#" class="btn-toggle-theme b-a b-grey active theme-selector m-b-30" data-action="default">
-                            <img alt="Theme default" src="assets/img/demo/theme_default.png" class="image-responsive-height">
+                            <img alt="Theme default" src="{{ asset('bundles/mikyadmin/assets/img/demo/theme_default.png') }}" class="image-responsive-height">
                             <div class="p-l-15 p-r-20 p-b-10 p-t-10">
                                 <p class="no-margin">
                                     <span class="block font-montserrat text-uppercase fs-12 bold">Default</span>
@@ -71,7 +71,7 @@ Menu</span></a>
                             </div>
                         </a>
                         <a href="#" class="btn-toggle-theme b-a b-grey theme-selector m-b-30" data-action="corporate">
-                            <img alt="Theme corporate" src="assets/img/demo/theme_corporate.png" class="image-responsive-height">
+                            <img alt="Theme corporate" src="{{ asset('bundles/mikyadmin/assets/img/demo/theme_corporate.png') }}" class="image-responsive-height">
                             <div class="p-l-15 p-r-20 p-b-10 p-t-10">
                                 <p class="no-margin">
                                     <span class="block font-montserrat text-uppercase fs-12 bold">Corporate</span>
@@ -80,7 +80,7 @@ Menu</span></a>
                             </div>
                         </a>
                         <a href="#" class="btn-toggle-theme b-a b-grey theme-selector m-b-30" data-action="retro">
-                            <img alt="Theme retro" src="assets/img/demo/theme_retro.png" class="image-responsive-height">
+                            <img alt="Theme retro" src="{{ asset('bundles/mikyadmin/assets/img/demo/theme_retro.png') }}" class="image-responsive-height">
                             <div class="p-l-15 p-r-20 p-b-10 p-t-10">
                                 <p class="no-margin">
                                     <span class="block font-montserrat text-uppercase fs-12 bold">Retro</span>
@@ -89,7 +89,7 @@ Menu</span></a>
                             </div>
                         </a>
                         <a href="#" class="btn-toggle-theme b-a b-grey theme-selector m-b-30" data-action="unlax">
-                            <img alt="Theme unlax" src="assets/img/demo/theme_unlax.png" class="image-responsive-height">
+                            <img alt="Theme unlax" src="{{ asset('bundles/mikyadmin/assets/img/demo/theme_unlax.png') }}" class="image-responsive-height">
                             <div class="p-l-15 p-r-20 p-b-10 p-t-10">
                                 <p class="no-margin">
                                     <span class="block font-montserrat text-uppercase fs-12 bold">Unlax</span>
@@ -98,7 +98,7 @@ Menu</span></a>
                             </div>
                         </a>
                         <a href="#" class="btn-toggle-theme b-a b-grey theme-selector m-b-30" data-action="vibes">
-                            <img alt="Thmeme vibes" src="assets/img/demo/theme_vibes.png" class="image-responsive-height">
+                            <img alt="Thmeme vibes" src="{{ asset('bundles/mikyadmin/assets/img/demo/theme_vibes.png') }}" class="image-responsive-height">
                             <div class="p-l-15 p-r-20 p-b-10 p-t-10">
                                 <p class="no-margin">
                                     <span class="block font-montserrat text-uppercase fs-12 bold">Vibes</span>
@@ -107,7 +107,7 @@ Menu</span></a>
                             </div>
                         </a>
                         <a href="#" class="btn-toggle-theme b-a b-grey theme-selector m-b-30" data-action="abstract">
-                            <img alt="Theme abstract" src="assets/img/demo/theme_abstract.png" class="image-responsive-height">
+                            <img alt="Theme abstract" src="{{ asset('bundles/mikyadmin/assets/img/demo/theme_abstract.png') }}" class="image-responsive-height">
                             <div class="p-l-15 p-r-20 p-b-10 p-t-10">
                                 <p class="no-margin">
                                     <span class="block font-montserrat text-uppercase fs-12 bold">Abstract</span>
