--- a/Resources/views/_javascripts.html.twig
+++ b/Resources/views/_javascripts.html.twig
@@ -1,4 +1,3 @@
-
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/pace/pace.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/jquery/jquery-1.11.1.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/modernizr.custom.js') }}" type="text/javascript"></script>
@@ -29,7 +28,6 @@
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/skycons/skycons.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/mikyadmin/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js') }}" type="text/javascript"></script>
 
-
 <script src="{{ asset('bundles/mikyadmin/pages/js/pages.min.js') }}"></script>
 
 
@@ -37,3 +35,6 @@
 
 <script src="{{ asset('bundles/mikyadmin/assets/js/demo.js') }}" type="text/javascript"></script>
 <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/xt5z6ibr';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+{% block angular_js %}
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js" type="text/javascript"></script>
+{% endblock %}
