--- a/Resources/views/_quickview.html.twig
+++ b/Resources/views/_quickview.html.twig
@@ -762,7 +762,7 @@
                                     <a data-view-animation="push-parrallax" data-view-port="#chat" data-navigate="view" class="" href="#">
 <span class="col-xs-height col-middle">
 <span class="thumbnail-wrapper d32 circular bg-success">
-<img width="34" height="34" alt="" data-src-retina="assets/img/profiles/7x.jpg" data-src="assets/img/profiles/7.jpg" src="assets/img/profiles/7x.jpg" class="col-top">
+<img width="34" height="34" alt="" data-src-retina="{{ asset('bundles/mikyadmin/assets/img/profiles/7x.jpg') }}" data-src="assets/img/profiles/7.jpg" src="assets/img/profiles/7x.jpg" class="col-top">
 </span>
 </span>
                                         <p class="p-l-10 col-xs-height col-middle col-xs-12">
