--- a/Resources/views/Crud/_grid.html.twig
+++ b/Resources/views/Crud/_grid.html.twig
@@ -8,6 +8,7 @@
 
 {% set path = path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) %}
 
+{{ miky_grid_render_batch_action(grid) }}
 
 <div class="portlet-body">
 
@@ -50,9 +51,9 @@
                     </form>
                     {% for row in data %}
                         <tr role="row" class="odd">
-                            <td class="v-align-middle">
+                            <td>
                                 <div class="checkbox ">
-                                    <input type="checkbox" value="{{ row.id }}" class="check-grid" id="checkbox{{ row.id }}">
+                                    <input type="checkbox" name="idx[]" value="{{ row.id }}" class="check-grid" id="checkbox{{ row.id }}">
                                     <label for="checkbox{{ row.id }}"></label>
                                 </div>
                             </td>
