--- a/Resources/views/Macro/labels.html.twig
+++ b/Resources/views/Macro/labels.html.twig
@@ -28,11 +28,11 @@
 {% endmacro %}
 
 {% macro enabled() %}
-    <span class="label label-sm label-success">{{ 'miky.ui.yes'|trans }}</span>
+    <span class="label label-sm label-success">{{ 'miky_core.yes'|trans }}</span>
 {% endmacro %}
 
 {% macro disabled() %}
-    <span class="label label-sm label-success">{{ 'miky.ui.no'|trans }}</span>
+    <span class="label label-sm label-success">{{ 'miky_core.no'|trans }}</span>
 
 {% endmacro %}
 
@@ -49,7 +49,7 @@
 {% macro yes() %}
     <span class="ui basic label">
         <i class="checkmark icon"></i>
-        {{ 'miky.ui.yes'|trans }}
+        {{ 'miky_core.yes'|trans }}
     </span>
 {% endmacro %}
 
