--- a/Resources/views/Crud/Breadcrumb/_create.html.twig
+++ b/Resources/views/Crud/Breadcrumb/_create.html.twig
@@ -1,8 +1,8 @@
 {% import 'MikyAdminBundle:Crud/Macro:breadcrumb.html.twig' as breadcrumb %}
 
 {% set breadcrumbs = [
-        { label: 'miky.ui.administration'|trans, url: path('miky_admin_dashboard') },
-        { label: (metadata.applicationName~'.ui.'~metadata.pluralName)|trans, url: path(configuration.getRouteName('index'), configuration.vars.route.parameters|default({})) },
+        { label: 'miky_admin.administration'|trans, url: path('miky_admin_dashboard') },
+        { label: (metadata.applicationName~'.'~metadata.pluralName)|trans, url: path(configuration.getRouteName('index'), configuration.vars.route.parameters|default({})) },
         { label: 'miky.ui.new'|trans }
     ]
 %}
