--- a/Resources/views/Crud/Breadcrumb/_update.html.twig
+++ b/Resources/views/Crud/Breadcrumb/_update.html.twig
@@ -2,7 +2,7 @@
 
 {% set breadcrumbs = [
         { label: 'miky.ui.administration'|trans, url: path('miky_admin_dashboard') },
-        { label: (metadata.applicationName~'.ui.'~metadata.pluralName)|trans, url: path(configuration.getRouteName('index'), configuration.vars.route.parameters|default({})) },
+        { label: (metadata.applicationName~'.'~metadata.pluralName)|trans, url: path(configuration.getRouteName('index'), configuration.vars.route.parameters|default({})) },
         { label: resource.code|default(resource.id)},
         { label: 'miky.ui.edit'|trans }
     ]
