--- a/Resources/views/Crud/index.html.twig
+++ b/Resources/views/Crud/index.html.twig
@@ -6,7 +6,7 @@
 {% set definition = resources.definition %}
 {% set data = resources.data %}
 
-{% set header = configuration.vars.header|default(metadata.applicationName~'.ui.'~metadata.pluralName) %}
+{% set header = configuration.vars.header|default(metadata.applicationName~'.'~metadata.pluralName) %}
 
 {% block title %}{{ parent() }} {{ header|trans }}{% endblock %}
 {% block breadcrumb_elements %}
@@ -20,9 +20,7 @@
 
     <div class="portlet ">
         <div class="portlet-title">
-            <div class="caption">
-                <i class="fa fa-shopping-cart"></i>{{ configuration.vars.subheader|default(null)|trans}}
-            </div>
+
             <div class="actions">
 
                 {% if definition.actionGroups.main is defined and definition.getActions('main')|length > 0 %}
@@ -31,6 +29,7 @@
                     {% endfor %}
                 {% endif %}
             </div>
+
         </div>
 
 
@@ -39,9 +38,7 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js" ></script>
     <script src="{{ asset('bundles/mikyadmin/assets/js/grid.js') }}"></script>
 {% endblock %}
-{% block angular_js %}
-    {{ parent() }}
-<script src="{{ asset('bundles/mikyadmin/assets/js/angular/form_angular.js') }}"></script>
-{% endblock %}
+
