--- a/Resources/views/Form/_cancelButton.twig
+++ b/Resources/views/Form/_cancelButton.twig
@@ -1,1 +1,1 @@
-<a href="{{ path|default(app.request.headers.get('referer')) }}" class="btn btn-success">{{ 'miky.ui.cancel'|trans }}</a>
+<a href="{{ path|default(app.request.headers.get('referer')) }}" class="btn btn-success">{{ 'miky_core.cancel'|trans }}</a>
