--- a/Resources/views/Form/_saveChanges.html.twig
+++ b/Resources/views/Form/_saveChanges.html.twig
@@ -1,4 +1,4 @@
 {% include '@MikyAdmin/Form/_cancelButton.twig' with {'path': cancel_path|default(null)} %}
 
 <button class="btn btn-success" type="submit">
-    <i class="fa fa-check"></i> {{ 'miky.ui.save_changes'|trans }}</button>
+    <i class="fa fa-check"></i> {{ 'miky_core.save_changes'|trans }}</button>
